# bristol-ml

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  README.md  TEMPLATE_USAGE.md  pyproject.toml  tmux-claude.sh
.claude/: settings.local.json
.claude/agents/: arch-reviewer.md  code-review.md  codebase-explorer.md  docs-writer.md  docs.md  domain-researcher.md  implementer.md  lead.md  minimalist.md  reframer.md  requirements-analyst.md  researcher.md  sceptic.md  test-author.md  tester.md  translator.md
.claude/hooks/: limit-write-paths.sh  tests-only-write.sh  tiered-paths.sh  tiered-write-paths.sh
.claude/playbook/: escalation-ladder.md  git-protocol.md  path-restrictions.md
.github/workflows/: ci.yml
conf/: __init__.py  _schemas.py  config.yaml
conf/embedding/: default.yaml
conf/evaluation/: benchmark.yaml  metrics.yaml  plots.yaml  rolling_origin.yaml
conf/features/: weather_calendar.yaml  weather_only.yaml  with_remit.yaml
conf/ingestion/: holidays.yaml  neso.yaml  neso_forecast.yaml  remit.yaml  weather.yaml
conf/llm/: extractor.yaml
conf/llm/prompts/: extract_v1.txt
conf/model/: linear.yaml  naive.yaml  nn_mlp.yaml  nn_temporal.yaml  sarimax.yaml  scipy_parametric.yaml
conf/services/: text_stats.yaml
conf/serving/: default.yaml
docs/: architecture.md
docs/adrs/: 0001-use-hydra-plus-pydantic.md  0002-filesystem-registry-first.md
docs/architecture/: README.md  ROADMAP.md
docs/architecture/decisions/: 0001-use-hydra-plus-pydantic.md  0003-protocol-for-model-interface.md  0005-skops-for-model-serialisation.md  0006-serving-lazy-load-cache.md  0007-ingestion-public-contract-bifurcates-by-data-shape.md  0008-embedding-index-protocol.md
docs/architecture/layers/: core.md  embeddings.md  evaluation.md  features.md  ingestion.md  llm.md  models-nn.md  models.md  registry.md  services.md  serving.md
docs/dev/: README.md
docs/intent/: 00-foundation.md  01-neso-demand-ingestion.md  02-weather-ingestion.md  03-feature-assembler.md  04-linear-baseline.md  05-calendar-features.md  06-enhanced-evaluation.md  07-sarimax.md  08-improvements.md  08-scipy-parametric.md  09-model-registry.md  10-simple-nn.md  11-complex-nn.md  12-serving.md  13-remit-ingestion.md  14-llm-extractor.md  15-embedding-index.md  16-model-with-remit.md  17-price-pipeline.md  18-drift-monitoring.md  19-orchestration.md  DESIGN.md
docs/lld/: README.md
docs/lld/exploration/: 03-feature-assembler.md
docs/lld/ingestion/: neso.md  weather.md
docs/lld/requirements/: 03-feature-assembler.md
docs/lld/research/: 01-neso-ingestion.md  02-weather-ingestion.md  03-feature-assembler.md  04-linear-baseline-codebase-map.md  04-linear-baseline-external-research.md  04-linear-baseline-requirements.md  05-calendar-features-codebase-map.md  05-calendar-features-external-research.md  05-calendar-features-requirements.md  06-enhanced-evaluation-codebase.md  06-enhanced-evaluation-domain.md  06-enhanced-evaluation-requirements.md  07-sarimax-codebase.md  07-sarimax-domain.md  07-sarimax-requirements.md  08-improvements-codebase.md  08-improvements-domain.md  08-improvements-requirements.md  08-improvements-scope-diff.md  08-scipy-parametric-codebase.md  08-scipy-parametric-domain.md  08-scipy-parametric-requirements.md  09-model-registry-codebase.md  09-model-registry-domain.md  09-model-registry-requirements.md  09-model-registry-scope-diff.md  10-simple-nn-codebase.md  10-simple-nn-domain.md  10-simple-nn-requirements.md  10-simple-nn-scope-diff.md  11-complex-nn-codebase.md  11-complex-nn-domain.md  11-complex-nn-requirements.md  11-complex-nn-scope-diff.md  12-serving-codebase.md  12-serving-domain.md  12-serving-requirements.md  12-serving-scope-diff.md  13-remit-ingestion-codebase.md  13-remit-ingestion-domain.md  (+15 more)
docs/lld/stages/: 00-foundation.md  01-neso-demand-ingestion.md  02-weather-ingestion.md  03-feature-assembler.md  04-linear-baseline.md  05-calendar-features.md  06-enhanced-evaluation.md  07-sarimax.md  08-scipy-parametric.md  09-model-registry.md  10-simple-nn.md  11-complex-nn.md  12-serving.md  13-remit-ingestion.md  (+3 more)
docs/stages/: 00-foundation.md  01-neso-demand-ingestion.md  02-weather-ingestion.md  README.md
meetups/: README.md  _template.md
meetups/assets/hue-demo/: README.md  pyproject.toml
meetups/assets/hue-demo/app/: color.py  main.py  models.py
meetups/assets/hue-demo/app/backends/: __init__.py  base.py  hue.py  virtual.py
meetups/assets/hue-demo/app/static/: index.html
meetups/assets/hue-mcp/: README.md  pyproject.toml
meetups/assets/hue-mcp/src/hue_mcp/: server.py
meetups/assets/hue-mcp/tests/: test_server.py
meetups/sessions/: 20260513.md  20260527.md  20260610.md  2260708.md
meetups/topics/: claude-code-as-a-team.md  facilitator-guide.md  stations.md
notebooks/: 01_neso_demand.ipynb  02_weather_demand.ipynb  03_feature_assembler.ipynb  04_linear_baseline.ipynb  04_remit_ablation.ipynb  05_calendar_features.ipynb  06_enhanced_evaluation.ipynb  07_sarimax.ipynb  08_scipy_parametric.ipynb  10-simple-nn.ipynb  11-complex-nn.ipynb  13_remit_ingestion.ipynb  14_llm_extractor.ipynb  15_embedding_index.ipynb
scripts/: _build_embedding_fixture.py  _build_notebook_06.py  _build_notebook_07.py  _build_notebook_08.py  _build_notebook_10.py  _build_notebook_11.py  _build_notebook_13.py  _build_notebook_14.py  _build_notebook_15.py  _build_notebook_16.py  record_holidays_cassette.py  record_neso_cassette.py  record_weather_cassette.py
src/TEMPLATE_PROJECT/: __init__.py  __main__.py  cli.py
src/bristol_ml/: __init__.py  __main__.py  cli.py  config.py  train.py
tests/: conftest.py
tests/integration/: mlflow_adapter.py  test_notebook_04.py  test_notebook_06.py  test_notebook_08.py  test_notebook_11.py  test_notebook_13.py  test_notebook_14.py  test_notebook_15.py  test_registry_mlflow_adapter.py  test_scipy_parametric_bounded_fit.py  test_text_stats_service.py  test_train_cli_registers_nn_mlp.py  test_train_cli_registers_nn_temporal.py
tests/unit/: test_config.py  test_train_cli.py
(+185 files in other folders)
