[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bristol_ml"
version = "0.0.0"
description = "Reference ML/DS architecture with a GB day-ahead electricity demand forecaster as the worked example."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Sam Drew", email = "comm@sdrew.com" }]
dependencies = [
    "hydra-core>=1.3,<2",
    "omegaconf>=2.3,<3",
    "pydantic>=2.7,<3",
    "httpx>=0.27,<1",
    "tenacity>=9,<10",
    "pyarrow>=16,<22",
    "pandas>=2.2,<3",
    "loguru>=0.7,<1",
    "statsmodels>=0.14,<1",
    "scipy>=1.13,<2",
    "joblib>=1.4,<2",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
    "torch>=2.7,<3",
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "skops>=0.10,<1",
    "openai>=1.40,<2",
    "sentence-transformers>=3.3,<5",
    "umap-learn>=0.5,<1",
    "ipykernel>=7.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "ruff>=0.6,<1",
    "pre-commit>=3.7,<5",
    "pytest-recording>=0.13,<1",
    "vcrpy>=6,<8",
    "jupyter>=1,<2",
    "nbconvert>=7,<8",
    "mlflow>=2.14,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bristol_ml"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["bristol_ml", "conf"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-ra --strict-markers --record-mode=none -m 'not slow and not gpu'"
markers = [
    "slow: benchmark/performance guards excluded from the default run; opt in with -m slow.",
    "gpu: opt-in CUDA-path tests, skipped when torch.cuda.is_available() is False.",
]
filterwarnings = [
    "ignore::DeprecationWarning:vcr.*",
]
